--- a/index-7.html
+++ b/index-7.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rynok Bay</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.png"> -->
     <link rel="stylesheet" href="assets/vendor/css/all.min.css">
     <link rel="stylesheet" href="assets/vendor/flaticon/flaticon.css">
     <link rel="stylesheet" href="assets/vendor/css/nice-select.css">
@@ -163,9 +163,9 @@
 
 <body class="rev-7-body">
     <!-- preloader begin -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <img src="assets/images/loader.gif" alt="Gif">
-    </div>
+    </div> -->
     <!-- preloader end -->
 
 
