--- a/Discount Coupon.html
+++ b/Discount Coupon.html
@@ -180,7 +180,16 @@
                                 <div class="select-language">
                                     <div class="language">
                                         <div class="select-lang">
-                                            <div id="aw" data-input-name="country" data-selected-country="UK" data-scrollable-height="250px" class="flagstrap"><select id="flagstrap-iXBnG27k" name="country" style="display: none;"><option value="">Please select country</option><option value="UK" selected="selected">English</option><option value="BD">Bangla</option></select><button type="button" data-bs-toggle="dropdown" id="flagstrap-drop-down-iXBnG27k" class="btn dropdown-toggle"><span class="flagstrap-selected-iXBnG27k"><i class="flagstrap-icon flagstrap-uk" style="margin-right: 10px;"></i>English</span><span class="caret" style="margin-left: 10px;"></span></button><ul id="flagstrap-drop-down-iXBnG27k-list" aria-labelled-by="flagstrap-drop-down-iXBnG27k" class="dropdown-menu"><li><a data-val="">Please select country</a></li><li><a data-val="UK"><i class="flagstrap-icon flagstrap-uk" style="margin-right: 10px;"></i>English</a></li><li><a data-val="BD"><i class="flagstrap-icon flagstrap-bd" style="margin-right: 10px;"></i>Bangla</a></li></ul></div>
+                                            <div id="aw" data-input-name="country" data-selected-country="UK" data-scrollable-height="250px" class="flagstrap">
+                                                <select id="flagstrap-iXBnG27k" name="country" style="display: none;">
+                                                    <option value="">Please select country</option>
+                                                    <option value="UK" selected="selected">English</option>
+                                                    <option value="BD">Bangla</option></select>
+                                                        </span>
+                                                        <span class="caret" style="margin-left: 10px;"></span>
+                                                    </button><ul id="flagstrap-drop-down-iXBnG27k-list" aria-labelled-by="flagstrap-drop-down-iXBnG27k" class="dropdown-menu">
+                                                        <li><a data-val="">Please select country</a></li></li><li><a ><i  style="margin-right: 10px;"></i></a></li></ul>
+                                                    </div>
                                         </div>
                                     </div>
                                 </div>
